chore: Change HTML layout

--- a/triangle/style.css
+++ b/triangle/style.css
@@ -4,5 +4,13 @@
 }
 
 #axisCanvas {
-  border: 1px solid #CCC;
+  border: 1px solid #ccc;
+}
+
+#canvas_wrapper {
+  float: left;
+}
+
+#container {
+  padding-left: 20px;
 }
