--- a/triangle/style.css
+++ b/triangle/style.css
@@ -1,13 +1,3 @@
-#axisCanvasRapper {
-  margin: 30px auto;
-  text-align: center;
-}
-
-#axisCanvas {
-  border: 1px solid #ccc;
-}
-
-
-#container {
-  padding-left: 20px;
+h2 {
+  margin: 20px !important;
 }
