--- a/triangle/style.css
+++ b/triangle/style.css
@@ -3,8 +3,17 @@
   float: left;
 }
 
-#container
-{
+canvas {
+  border-style: solid;
+  border-color: #bbbbbb;
+}
+
+body, #wrapper {
+  margin: 0;
+  padding: 0;
+}
+
+#container {
   margin-left: 20px;
 }
 
