--- a/triangle/style.css
+++ b/triangle/style.css
@@ -1,10 +1,7 @@
 canvas {
   border-style: solid;
-  border-color: #bbbbbb;
-}
-
-body {
-  background-color: grey;
+  border-color: deepskyblue;
+  border-radius: 5px;
 }
 
 #wrapper {
@@ -12,18 +9,7 @@ body {
 }
 
 b {
-  color: blue;
-}
-
-h1 {
-  font-size: 200% !important;
-  font-weight: bold !important;
-}
-
-h2 {
-  margin-top: 15px !important;
-  font-size: 150% !important;
-  font-weight: bold !important;
+  color: crimson;
 }
 
 label {
